--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "damerau-levenshtein": "^1.0.8",
     "expo": "^51.0.0",
     "expo-av": "~14.0.5",
+    "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
     "form-data": "^4.0.0",
     "openai": "^4.29.2",
